--- a/bo/Base.lproj/Main.storyboard
+++ b/bo/Base.lproj/Main.storyboard
@@ -23,13 +23,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I'd like this to be a title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HXs-oB-YmG" customClass="StyleableLabel" customModule="bo" customModuleProvider="target">
-                                <rect key="frame" x="62.5" y="30" width="251.5" height="29.5"/>
+                                <rect key="frame" x="62" y="30" width="252" height="30"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="And I'd like this to be the body text" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qI0-dw-OWD" customClass="StyleableLabel" customModule="bo" customModuleProvider="target">
-                                <rect key="frame" x="26" y="99.5" width="323" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I'd reset this and just in case" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qI0-dw-OWD" customClass="StyleableLabel" customModule="bo" customModuleProvider="target">
+                                <rect key="frame" x="26" y="70" width="323" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -38,7 +38,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bold" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lNm-Da-Lvh" customClass="StyleableLabel" customModule="bo" customModuleProvider="target">
-                                <rect key="frame" x="26" y="166.5" width="323" height="21"/>
+                                <rect key="frame" x="26" y="101" width="323" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -47,13 +47,13 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Italic" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1cE-6c-eib" customClass="StyleableLabel" customModule="bo" customModuleProvider="target">
-                                <rect key="frame" x="26.5" y="207.5" width="323" height="21"/>
+                                <rect key="frame" x="26" y="132" width="323" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Red" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HlZ-DY-apl" customClass="StyleableLabel" customModule="bo" customModuleProvider="target">
-                                <rect key="frame" x="26.5" y="255.5" width="323" height="21"/>
+                                <rect key="frame" x="26" y="163" width="323" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -62,9 +62,9 @@
                         <color key="backgroundColor" red="1" green="0.53045744289999996" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="HXs-oB-YmG" firstAttribute="top" secondItem="Im1-rM-eHW" secondAttribute="bottom" constant="10" id="4T7-Wo-nUL"/>
-                            <constraint firstItem="HlZ-DY-apl" firstAttribute="top" secondItem="1cE-6c-eib" secondAttribute="bottom" constant="27" id="50Z-oy-3ec"/>
-                            <constraint firstItem="lNm-Da-Lvh" firstAttribute="top" secondItem="qI0-dw-OWD" secondAttribute="bottom" constant="46" id="Jcd-Zg-cLl"/>
-                            <constraint firstItem="qI0-dw-OWD" firstAttribute="top" secondItem="HXs-oB-YmG" secondAttribute="bottom" constant="40" id="Lfu-tt-bI2"/>
+                            <constraint firstItem="HlZ-DY-apl" firstAttribute="top" secondItem="1cE-6c-eib" secondAttribute="bottom" constant="10" id="50Z-oy-3ec"/>
+                            <constraint firstItem="lNm-Da-Lvh" firstAttribute="top" secondItem="qI0-dw-OWD" secondAttribute="bottom" constant="10" id="Jcd-Zg-cLl"/>
+                            <constraint firstItem="qI0-dw-OWD" firstAttribute="top" secondItem="HXs-oB-YmG" secondAttribute="bottom" constant="10" id="Lfu-tt-bI2"/>
                             <constraint firstItem="1cE-6c-eib" firstAttribute="width" secondItem="lNm-Da-Lvh" secondAttribute="width" id="T6B-h8-1GL"/>
                             <constraint firstItem="lNm-Da-Lvh" firstAttribute="centerX" secondItem="qI0-dw-OWD" secondAttribute="centerX" id="Tu1-4m-Tx8"/>
                             <constraint firstItem="1cE-6c-eib" firstAttribute="centerX" secondItem="lNm-Da-Lvh" secondAttribute="centerX" id="cWy-27-oww"/>
@@ -74,7 +74,7 @@
                             <constraint firstItem="qI0-dw-OWD" firstAttribute="leading" secondItem="VsK-G9-i4d" secondAttribute="leadingMargin" constant="10" id="rNh-Y6-wu8"/>
                             <constraint firstItem="HlZ-DY-apl" firstAttribute="centerX" secondItem="1cE-6c-eib" secondAttribute="centerX" id="rfC-2v-pOd"/>
                             <constraint firstAttribute="trailingMargin" secondItem="qI0-dw-OWD" secondAttribute="trailing" constant="10" id="wJx-C9-5pX"/>
-                            <constraint firstItem="1cE-6c-eib" firstAttribute="top" secondItem="lNm-Da-Lvh" secondAttribute="bottom" constant="20" id="xKd-Ln-EIc"/>
+                            <constraint firstItem="1cE-6c-eib" firstAttribute="top" secondItem="lNm-Da-Lvh" secondAttribute="bottom" constant="10" id="xKd-Ln-EIc"/>
                         </constraints>
                     </view>
                     <connections>
